modified config.yml to fix command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,15 +5,13 @@ jobs:
       - image: alunir/laurel-build:latest
     steps:
       - checkout
-      - run:
-          - python setup.py build
+      - run: python setup.py build
   test:
     docker:
       - image: alunir/laurel-build:latest
     steps:
       - checkout
-      - run:
-          - python setup.py test
+      - run: python setup.py test
 workflows:
   version: 2
   build_and_test:
