modified .gitignore to add .idea/workspace.xml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,13 +2,13 @@ version: 2
 jobs:
   build:
     docker:
-      - image: alunir/laurel-build:latest
+      - image: jimako1989/laurel-build:latest
     steps:
       - checkout
       - run: python setup.py build
   test:
     docker:
-      - image: alunir/laurel-build:latest
+      - image: jimako1989/laurel-build:latest
     steps:
       - checkout
       - run: python setup.py test
