--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,20 @@
 version: 2
 jobs:
-  build_35:
-    docker:
-      - image: python:3.5
-    steps:
-      - checkout
-      - run: python setup.py build
   test_35:
     docker:
       - image: python:3.5
+        environment:
+          DOCKER_DIST_DIR: /root/project
+          CONFIG_PATH: tests
     steps:
       - checkout
       - run: python setup.py test
-  build_37:
-    docker:
-      - image: python:3.7
-    steps:
-      - checkout
-      - run: python setup.py build
   test_37:
     docker:
       - image: python:3.7
+        environment:
+          DOCKER_DIST_DIR: /root/project
+          CONFIG_PATH: tests
     steps:
       - checkout
       - run: python setup.py test
