modified .env to remove LOGGER_LEVEL for asserting in its test

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 IS_OUTPUT_TO_LOGFILE=False
 DATE_FORMAT=%Y-%m-%d %H:%M:%S.%f
-LOGGER_LEVEL=DEBUG
+# LOGGER_LEVEL=DEBUG # for TestSystemLogger
 LOGFILE_PATH=logs
 LOGFILE_LEVEL=DEBUG
 LOGFILE_NAME_EXT=.log
